Allow demo feature at webcomponents.org

--- a/index.html
+++ b/index.html
@@ -5,141 +5,13 @@
   <head>
     <title>vsc-fab-button demo</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="../webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="../iron-demo-helpers/demo-snippet.html">
-    <link rel="import" href="../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="vsc-fab-button.html">
+
+    <script>
+      window.location = "/components/vsc-fab-button/demo";
+    </script>
+
   </head>
 
-  <body>
+  <body></body>
 
-    <custom-style>
-      <style is="custom-style" include="demo-pages-shared-styles">
-        .vertical-section-container {
-          max-width: 500px;
-        }
-      </style>
-    </custom-style>
-
-    <main class="vertical-section-container centered">
-      <h1>vsc-fab-button demo</h1>
-
-      <!-- Default - demo
-      ========================= -->
-
-      <h2>Default</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <vsc-fab-button></vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Elevations - demo
-      ========================= -->
-
-      <h2>Elevations</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <vsc-fab-button></vsc-fab-button>
-        <vsc-fab-button elevation="2"></vsc-fab-button>
-        <vsc-fab-button elevation="3"></vsc-fab-button>
-        <vsc-fab-button elevation="4"></vsc-fab-button>
-        <vsc-fab-button elevation="5"></vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Inactive - demo
-      ========================= -->
-
-      <h2>Inactive</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <vsc-fab-button disabled>
-        </vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Mini - demo
-      ========================= -->
-
-      <h2>Mini</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <vsc-fab-button mini>
-        </vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Custom icon - demo
-      ========================= -->
-
-      <h2>Custom icon</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <style is="custom-style">
-          .burguer {
-            --vsc-fab-button-color: #ffeb00;
-          }
-        </style>
-
-        <vsc-fab-button
-          class="burguer"
-          icon="https://uploaddeimagens.com.br/images/001/071/867/full/iconmonstr-fast-food-3-32.png">
-        </vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Custom style - demo
-      ========================= -->
-
-      <h2>Custom style</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <style is="custom-style">
-          .unicorn {
-            --vsc-fab-button-color: #42c8f4;
-          }
-        </style>
-
-        <vsc-fab-button class="unicorn">
-        </vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-      <!-- Toggle - demo
-      ========================= -->
-
-      <h2>Toggle</h2>
-
-      <demo-snippet class="centered-demo">
-        <template>
-
-        <vsc-fab-button toggle>
-        </vsc-fab-button>
-
-        </template>
-      </demo-snippet>
-
-    </main>
-
-  </body>
 </html>
