Fix demo in webcomponents.org

--- a/index.html
+++ b/index.html
@@ -5,11 +5,7 @@
   <head>
     <title>vsc-fab-button demo</title>
     <meta charset="utf-8">
-
-    <script>
-      window.location = "/components/vsc-fab-button/demo";
-    </script>
-
+    <meta http-equiv="refresh" content="0; url=/components/vsc-fab-button/demo">
   </head>
 
   <body></body>
