Add instructions in index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <meta http-equiv="refresh" content="0; url=/components/vsc-fab-button/demo">
   </head>
 
-  <body></body>
+  <body>
+    <!--
+      API docs are available in REAME.md
+      Demos are avaible in ./demo folder
+    -->
+  </body>
 
 </html>
