Update prefix to valle-

--- a/demo/index.html
+++ b/demo/index.html
@@ -3,13 +3,13 @@
 <html lang="en">
 
   <head>
-    <title>vsc-fab-button demo</title>
+    <title>valle-fab demo</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../../iron-demo-helpers/demo-snippet.html">
     <link rel="import" href="../../iron-demo-helpers/demo-pages-shared-styles.html">
-    <link rel="import" href="../vsc-fab-button.html">
+    <link rel="import" href="../valle-fab.html">
   </head>
 
   <body>
@@ -23,7 +23,7 @@
     </custom-style>
 
     <main class="vertical-section-container centered">
-      <h1>vsc-fab-button demo</h1>
+      <h1>valle-fab demo</h1>
 
       <!-- Default - demo
       ========================= -->
@@ -33,7 +33,7 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button></vsc-fab-button>
+        <valle-fab></valle-fab>
 
         </template>
       </demo-snippet>
@@ -46,11 +46,11 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button></vsc-fab-button>
-        <vsc-fab-button elevation="2"></vsc-fab-button>
-        <vsc-fab-button elevation="3"></vsc-fab-button>
-        <vsc-fab-button elevation="4"></vsc-fab-button>
-        <vsc-fab-button elevation="5"></vsc-fab-button>
+        <valle-fab></valle-fab>
+        <valle-fab elevation="2"></valle-fab>
+        <valle-fab elevation="3"></valle-fab>
+        <valle-fab elevation="4"></valle-fab>
+        <valle-fab elevation="5"></valle-fab>
 
         </template>
       </demo-snippet>
@@ -63,8 +63,8 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button disabled>
-        </vsc-fab-button>
+        <valle-fab disabled>
+        </valle-fab>
 
         </template>
       </demo-snippet>
@@ -77,8 +77,8 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button mini>
-        </vsc-fab-button>
+        <valle-fab mini>
+        </valle-fab>
 
         </template>
       </demo-snippet>
@@ -93,14 +93,14 @@
 
         <style is="custom-style">
           .burguer {
-            --vsc-fab-button-color: #ffeb00;
+            --valle-fab-color: #ffeb00;
           }
         </style>
 
-        <vsc-fab-button
+        <valle-fab
           class="burguer"
           icon="https://uploaddeimagens.com.br/images/001/071/867/full/iconmonstr-fast-food-3-32.png">
-        </vsc-fab-button>
+        </valle-fab>
 
         </template>
       </demo-snippet>
@@ -115,12 +115,12 @@
 
         <style is="custom-style">
           .unicorn {
-            --vsc-fab-button-color: #42c8f4;
+            --valle-fab-color: #42c8f4;
           }
         </style>
 
-        <vsc-fab-button class="unicorn">
-        </vsc-fab-button>
+        <valle-fab class="unicorn">
+        </valle-fab>
 
         </template>
       </demo-snippet>
@@ -133,8 +133,8 @@
       <demo-snippet class="centered-demo">
         <template>
 
-        <vsc-fab-button toggle>
-        </vsc-fab-button>
+        <valle-fab toggle>
+        </valle-fab>
 
         </template>
       </demo-snippet>
