--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
 
   <head>
-    <title>vsc-fab-button demo</title>
+    <title>valle-fab demo</title>
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=/components/vsc-fab-button/demo">
+    <meta http-equiv="refresh" content="0; url=/components/valle-fab/demo">
   </head>
 
   <body>
