--- a/test/a11y.html
+++ b/test/a11y.html
@@ -4,55 +4,55 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>A11y vsc-fab-button test</title>
+    <title>A11y valle-fab test</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
     <link rel="import" href="../../polymer/polymer.html">
-    <link rel="import" href="../vsc-fab-button.html">
+    <link rel="import" href="../valle-fab.html">
   </head>
   <body>
 
     <test-fixture id="labeledFab">
       <template>
-        <vsc-fab-button label="awesome"></vsc-fab-button>
+        <valle-fab label="awesome"></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="defaultToggleFab">
       <template>
-        <vsc-fab-button label="awesome" toggle></vsc-fab-button>
+        <valle-fab label="awesome" toggle></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="pressedFab">
       <template>
-        <vsc-fab-button label="awesome" toggle pressed></vsc-fab-button>
+        <valle-fab label="awesome" toggle pressed></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="clickToggleFab">
       <template>
-        <vsc-fab-button toggle></vsc-fab-button>
+        <valle-fab toggle></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="noToggleFab">
       <template>
-        <vsc-fab-button></vsc-fab-button>
+        <valle-fab></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="svgFab">
       <template>
-        <vsc-fab-button label="awesome icon"></vsc-fab-button>
+        <valle-fab label="awesome icon"></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="clickToggleFab">
       <template>
-        <vsc-fab-button toggle label="awesome icon"></vsc-fab-button>
+        <valle-fab toggle label="awesome icon"></valle-fab>
       </template>
     </test-fixture>
 
