--- a/test/basic.html
+++ b/test/basic.html
@@ -4,48 +4,48 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, minimum-scale=1, initial-scale=1, user-scalable=yes">
 
-    <title>Basic vsc-fab-button test</title>
+    <title>Basic valle-fab test</title>
 
     <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
     <script src="../../web-component-tester/browser.js"></script>
 
-    <link rel="import" href="../vsc-fab-button.html">
+    <link rel="import" href="../valle-fab.html">
   </head>
   <body>
 
     <test-fixture id="defaultFab">
       <template>
-        <vsc-fab-button></vsc-fab-button>
+        <valle-fab></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="disabledFab">
       <template>
-        <vsc-fab-button disabled></vsc-fab-button>
+        <valle-fab disabled></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="miniFab">
       <template>
-        <vsc-fab-button mini></vsc-fab-button>
+        <valle-fab mini></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="customFab">
       <template>
-        <vsc-fab-button icon="fake-icon-path.svg"></vsc-fab-button>
+        <valle-fab icon="fake-icon-path.svg"></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="toggleFab">
       <template>
-        <vsc-fab-button toggle></vsc-fab-button>
+        <valle-fab toggle></valle-fab>
       </template>
     </test-fixture>
 
     <test-fixture id="pressedFab">
       <template>
-        <vsc-fab-button toggle pressed></vsc-fab-button>
+        <valle-fab toggle pressed></valle-fab>
       </template>
     </test-fixture>
 
