--- a/valle-fab.html
+++ b/valle-fab.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer-element.html">
 
-<dom-module id="vsc-fab-button">
+<dom-module id="valle-fab">
   <template>
 
     <style>
@@ -11,16 +11,16 @@
         display: inline-block;
       }
 
-      .fab-button {
+      .fab {
         box-sizing: border-box;
         display: inline-flex;
         justify-content: center;
         align-items: center;
         border: 0;
-        background-color: var(--vsc-fab-button-color, #ff6d00);
+        background-color: var(--valle-fab-color, #ff6d00);
         border-radius: 50%;
-        width: var(--vsc-fab-button-size, 56px);
-        height: var(--vsc-fab-button-size, 56px);
+        width: var(--valle-fab-size, 56px);
+        height: var(--valle-fab-size, 56px);
         transition: background-color .3s;
 
 
@@ -34,25 +34,25 @@
 
       /* Elevations */
 
-      :host([elevation="2"]) .fab-button {
+      :host([elevation="2"]) .fab {
       box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14),
-                    0 1px 10px 0 rgba(0, 0, 0, 0.12),
-                    0 2px 4px -1px rgba(0, 0, 0, 0.4);
+                  0 1px 10px 0 rgba(0, 0, 0, 0.12),
+                  0 2px 4px -1px rgba(0, 0, 0, 0.4);
       }
 
-      :host([elevation="3"]) .fab-button {
+      :host([elevation="3"]) .fab {
         box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.14),
                     0 1px 18px 0 rgba(0, 0, 0, 0.12),
                     0 3px 5px -1px rgba(0, 0, 0, 0.4);
       }
 
-      :host([elevation="4"]) .fab-button {
+      :host([elevation="4"]) .fab {
       box-shadow: 0 8px 10px 1px rgba(0, 0, 0, 0.14),
-                    0 3px 14px 2px rgba(0, 0, 0, 0.12),
-                    0 5px 5px -3px rgba(0, 0, 0, 0.4);
+                  0 3px 14px 2px rgba(0, 0, 0, 0.12),
+                  0 5px 5px -3px rgba(0, 0, 0, 0.4);
       }
 
-      :host([elevation="5"]) .fab-button {
+      :host([elevation="5"]) .fab {
         box-shadow: 0 12px 16px 1px rgba(0, 0, 0, 0.14),
                     0 4px 22px 3px rgba(0, 0, 0, 0.12),
                     0 6px 7px -4px rgba(0, 0, 0, 0.4);
@@ -60,69 +60,69 @@
 
       /* UI feedbacks */
 
-      .fab-button:focus {
-        outline-color: var(--vsc-fab-button-color, #ff6d00);
+      .fab:focus {
+        outline-color: var(--valle-fab-color, #ff6d00);
         outline-offset: 5px;
         outline-width: thin;
       }
 
-      .fab-button:hover {
+      .fab:hover {
         cursor: pointer;
         background-image: linear-gradient(rgba(255, 255, 255, 0.3), rgba(255, 255, 255, 0.3));
       }
 
       /* States */
 
-      :host([mini]) .fab-button {
-        width: var(--vsc-fab-button-mini-size, 40px);
-        height: var(--vsc-fab-button-mini-size, 40px);
+      :host([mini]) .fab {
+        width: var(--valle-fab-mini-size, 40px);
+        height: var(--valle-fab-mini-size, 40px);
       }
 
-      :host([disabled]) .fab-button {
+      :host([disabled]) .fab {
         background: #e1e1e1;
       }
 
-      :host([disabled]) .fab-button:hover {
+      :host([disabled]) .fab:hover {
         cursor: default;
         background: #e1e1e1;
       }
 
-      :host([pressed]) .fab-button {
-        background-color: var(--vsc-fab-button-pressed-color, #ff0101);
+      :host([pressed]) .fab {
+        background-color: var(--valle-fab-pressed-color, #ff0101);
       }
 
       /* Icon */
 
-      .fab-button__icon {
-        width: var(--vsc-fab-button-icon-size, 24px);
-        height: var(--vsc-fab-button-icon-size, 24px);
+      .fab__icon {
+        width: var(--valle-fab-icon-size, 24px);
+        height: var(--valle-fab-icon-size, 24px);
         transition: transform .3s;
-        fill: var(--vsc-fab-button-default-icon-color, #fff);
+        fill: var(--valle-fab-default-icon-color, #fff);
       }
 
-      :host([pressed]) .fab-button__icon {
+      :host([pressed]) .fab__icon {
         transform: rotate(45deg);
       }
 
     </style>
 
-    <button class="fab-button" id="fabBtn" disabled=[[disabled]]>
+    <button class="fab" id="fabBtn" disabled=[[disabled]]>
 
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="fab-button__icon" style="display: inline-block;" id="defaultIcon">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" class="fab__icon" style="display: inline-block;" id="defaultIcon">
         <title>[[label]]</title>
         <path d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"></path>
       </svg>
 
-      <img src=[[icon]] class="fab-button__icon" alt=[[label]] style="display: none;" id="fabIcon">
+      <img src=[[icon]] class="fab__icon" alt=[[label]] style="display: none;" id="fabIcon">
 
     </button>
 
   </template>
 
   <script>
-    class vscFabButton extends Polymer.Element {
+    class valleFab extends Polymer.Element {
 
-      static get is() { return 'vsc-fab-button'; }
+      static get is() { return 'valle-fab'; }
 
       connectedCallback() {
         super.connectedCallback();
@@ -193,6 +193,6 @@
 
     }
 
-    window.customElements.define(vscFabButton.is, vscFabButton);
+    window.customElements.define(valleFab.is, valleFab);
   </script>
 </dom-module>
